fix(number): prevent vertical overflow on number report & notices
related to OPT-4844

--- a/client/src/modules/components/ReportRenderer/NoDataNotice.scss
+++ b/client/src/modules/components/ReportRenderer/NoDataNotice.scss
@@ -5,6 +5,7 @@
   border-radius: 8px;
   color: var(--grey-lighten-56);
   text-align: center;
+  overflow: auto;
 
   h1 {
     font-size: 16px;
