--- a/client/src/modules/components/ReportRenderer/visualizations/Number.scss
+++ b/client/src/modules/components/ReportRenderer/visualizations/Number.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  overflow: auto;
 
   .container {
     align-self: center;
